--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <div id="title">
       I am so blue :(
     </div>
+    <div>
+      <div id="textbox">
+        Such padding!
+      </div>
+    </div>
   </body>
 </html>
