--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         Such padding!
         
       </div>
-      <di
+      <div>
+        <div id="roundedborder">
+          So border-radius!
+        </div>
+      </div>
     </div>
   </body>
 </html>
